base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdo
spec:
  selector:
    app: REPLACE-APP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
