base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REPLACE-NAME
spec:
  rules:
  - host: REPLACE-HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: REPLACE-NAME
            port:
              number: 80
